Fri Nov 22 12:27:27 2002  Craig Rodrigues <crodrigu@bbn.com>

	* orbsvcs/examples/CosEC/RtEC_Based/lib/Makefile:
          Fix extraneous spaces in GNU make findstring commands.

Fri Nov 22 04:53:12 2002  Bala  <bala@cs.wustl.edu>

        * TAO version 1.2.6 released.

Thu Nov 21 18:45:23 2002  Pradeep Gore  <pradeep@oomworks.com>

	* docs/releasenotes/index.html: Updates the section on
	  Notification Service.
	* docs/releasenotes/notify.html: Added a detailed feature matrix
	  of the Cos Notification Service.

Thu Nov 21 13:26:27 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Connection_Handler.cpp: Avoid checks for reactor consistency
	  if the handler is not registered with the reactor. This should
	  fix most of the runtime problems that we are seeing. This place
	  needs to be reexamined after the beta. The intersection of
	  RTCORBA and nonRT cases simply makes this place too
	  complicated. 

Wed Nov 20 18:04:00 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Muxing/run_test.pl: Checked in a version of the script
	  that I use locally by mistake. Reverted the change to the
	  original form.

Wed Nov 20 18:01:38 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Connection_Handler.cpp (close_connection_eh): Did cosmetic
	  changes to the assertive checks.

Wed Nov 20 15:23:40 2002  Ossama Othman  <ossama@uci.edu>

	* TAO_IDL/be/be_visitor_operation/ami_cs.cpp
	  (gen_marshal_and_invoke):

	  Initialize the invocation status variable in the generated stub
	  code.  Previously, that variable was uninitialized, which caused
	  some invalid code execution paths to occur.  Fixes some problems
	  exhibited by TAO's basic AMI regression test.

Wed Nov 20 15:15:02 2002  Ossama Othman  <ossama@uci.edu>

	* tao/ClientRequestInfo_i.h (setup_picurrent):

	  New method that sets up the thread scope and request scope
	  PICurrent objects on the client side.
